--- a/templates/enseignant/edit_quiz.html
+++ b/templates/enseignant/edit_quiz.html
@@ -15,6 +15,8 @@
                 <span>({{ item.question.type }}, {{ item.question.bareme }} pts, {{ item.question.duree }}s)</span>
             </div>
 
+
+            <!-- Actions -->
             <div class="action-links">
                 <a href="{{ url_for('enseignant.edit_question', question_id=item.question.id) }}">Modifier</a>
                 <a href="{{ url_for('enseignant.delete_question', question_id=item.question.id) }}">Supprimer</a>
@@ -86,11 +88,6 @@
                     </label>
                 </div>
             </div>
-
-            <div id="zoneNumerique" style="display: none; margin-top: 15px; padding: 15px; border: 1px solid #ddd; background-color: #e9ecef; border-radius: 5px;">
-                <p><strong>Entrez la valeur numérique correcte :</strong></p>
-                <input type="number" step="any" name="bonne_reponse_num" id="input_num"style="width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc;">
-            </div>
             
             <button type="submit">Ajouter la question</button>
         </form>
@@ -112,15 +109,12 @@
 function updateChoixFields() {
     const type = document.getElementById('type').value;    
     const zoneQCM = document.getElementById('zoneQCM');
-    const zoneVraiFaux = document.getElementById('zoneVraiFaux'); 
-    const zoneNumerique = document.getElementById('zoneNumerique');   
+    const zoneVraiFaux = document.getElementById('zoneVraiFaux');    
     const inputsQCM = zoneQCM.querySelectorAll('input[type="text"]');
     const inputsVF = zoneVraiFaux.querySelectorAll('input[type="radio"]');
-    const inputNum = document.getElementById('input_num');
     
     if (type === 'Vrai_Faux') {
-        zoneQCM.style.display = 'none'; 
-        zoneNumerique.style.display = 'none';     
+        zoneQCM.style.display = 'none';      
         zoneVraiFaux.style.display = 'block';
         inputsQCM.forEach(function(input) {
             input.required = false;
@@ -128,40 +122,23 @@ function updateChoixFields() {
         inputsVF.forEach(function(input) {
             input.required = true;
         });
-        if(inputNum) inputNum.required = false;
 
     } 
     else if (type === 'QCM_simple' || type === 'QCM_multiple') {
         zoneQCM.style.display = 'block';     
         zoneVraiFaux.style.display = 'none';
-        zoneNumerique.style.display = 'none';
         inputsQCM.forEach(function(input) {
             input.required = true;
         });
         inputsVF.forEach(function(input) {
             input.required = false;
         });
-        if(inputNum) inputNum.required = false;
-    } 
-    else if (type === 'numerique') {
-        zoneQCM.style.display = 'none';      
-        zoneVraiFaux.style.display = 'none';
-        zoneNumerique.style.display = 'block';
-        inputsQCM.forEach(function(input) {
-            input.required = false;
-        });
-        inputsVF.forEach(function(input) {
-            input.required = false;
-        });
-        if(inputNum) inputNum.required = true;
     } 
     else {
         zoneQCM.style.display = 'none';
         zoneVraiFaux.style.display = 'none';
-        zoneNumerique.style.display = 'none';
         inputsQCM.forEach(input => input.required = false);
         inputsVF.forEach(input => input.required = false);
-        if(inputNum) inputNum.required = false;
     }
 }
 function ajouterChoix() {
